pickled sorted list of distance vectors

--- a/modeling/Assignment2 - Digit Recognition.ipynb
+++ b/modeling/Assignment2 - Digit Recognition.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from collections import Counter  # For mode\n",
-    "from sklearn.metrics import confusion_matrix\n"
+    "from sklearn.metrics import confusion_matrix\n",
+    "import pickle"
    ]
   },
   {
@@ -205,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -223,9 +224,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.9436970602889886, 0.931738913801694, 0.9446935724962631, 0.9436970602889886, 0.9431988041853513, 0.9407075236671649, 0.9412057797708022, 0.9397110114598903, 0.9397110114598903, 0.9357249626307922, 0.9337319382162431, 0.9302441454907823, 0.9302441454907823, 0.9287493771798705, 0.9292476332835077, 0.9267563527653214, 0.9252615844544095, 0.922272047832586, 0.9227703039362232, 0.918784255107125, 0.9182859990034878, 0.9202790234180369, 0.9202790234180369, 0.916791230692576, 0.9192825112107623, 0.9197807673143996, 0.9152964623816642, 0.9162929745889388, 0.9152964623816642, 0.9128051818634778, 0.9103139013452914, 0.9123069257598405, 0.9103139013452914, 0.909317389138017, 0.911310413552566, 0.9083208769307424, 0.9083208769307424, 0.9068261086198306, 0.9063278525161933, 0.9038365719980069, 0.9023418036870952, 0.9003487792725461, 0.9008470353761834, 0.9003487792725461, 0.8998505231689088, 0.8968609865470852, 0.8968609865470852, 0.8953662182361734, 0.8948679621325362, 0.8963627304434479, 0.8933731938216243, 0.8913801694070752, 0.8913801694070752, 0.8898854010961634, 0.8893871449925261, 0.8888888888888888, 0.8888888888888888, 0.8873941205779771, 0.8883906327852517, 0.8873941205779771, 0.8878923766816144, 0.8873941205779771, 0.8863976083707026, 0.8863976083707026, 0.8839063278525162, 0.8824115595416044, 0.8834080717488789, 0.8819133034379671, 0.8824115595416044, 0.8804185351270553, 0.8784255107125062, 0.8769307424015944, 0.8784255107125062, 0.8789237668161435, 0.877927254608869, 0.8769307424015944, 0.8754359740906826, 0.8769307424015944, 0.8759342301943199, 0.8754359740906826, 0.8754359740906826, 0.8749377179870453, 0.8739412057797707, 0.8714499252615845, 0.8709516691579472, 0.8704534130543099, 0.8694569008470354, 0.8689586447433981, 0.8689586447433981, 0.8679621325361235, 0.8684603886397608, 0.8679621325361235, 0.8664673642252118, 0.8664673642252118, 0.8684603886397608, 0.8644743398106627, 0.8649725959143, 0.8634778276033881, 0.8619830592924763, 0.8624813153961136]\n"
+     ]
+    }
+   ],
    "source": [
     "k_scores = []\n",
     "for k in range(1, 101):\n",
@@ -249,9 +258,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max K = 3 with score of 0.944693572496\n"
+     ]
+    }
+   ],
    "source": [
     "print \"Max K =\", np.argmax(k_scores) + 1, \"with score of\", max(k_scores)"
    ]
@@ -265,9 +282,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[351,   0,   2,   0,   2,   0,   3,   0,   0,   1],\n",
+       "       [  0, 258,   0,   0,   3,   0,   3,   0,   0,   0],\n",
+       "       [ 13,  10, 142,   7,   5,   0,   2,   8,  10,   1],\n",
+       "       [  7,   0,   2, 147,   0,   4,   0,   2,   2,   2],\n",
+       "       [  1,  16,   1,   0, 146,   1,   2,   2,   1,  30],\n",
+       "       [ 13,   2,   1,  10,   4, 119,   2,   2,   2,   5],\n",
+       "       [ 13,   1,   1,   0,   2,   1, 152,   0,   0,   0],\n",
+       "       [  0,   4,   0,   0,   4,   0,   0, 135,   1,   3],\n",
+       "       [  6,   9,   1,  17,   1,   0,   3,   3, 121,   5],\n",
+       "       [  1,   4,   0,   0,   3,   0,   0,   7,   2, 160]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "correct = 0\n",
     "K = 3\n",
@@ -277,6 +314,24 @@
     "    prediction = get_mode(labels)\n",
     "    predictions.append(prediction)\n",
     "confusion_matrix(test_y_data, predictions, labels=range(10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Since generating the distance vector data is the most time intensive thing (20ish minutes), we'll just save it to a file**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pickle.dump( distance_vectors, open( \"distance_vectors_data.p\", \"wb\" ) )"
    ]
   },
   {
