Fixed itgit add .! The bias term was always throwing the results to the most common class. Commenting out the bias term got me from 20% accuracy to 91% accuracy

--- a/3-naive-bayes-article-classification/Preparing Data for Naive Bayes.ipynb
+++ b/3-naive-bayes-article-classification/Preparing Data for Naive Bayes.ipynb
@@ -142,6 +142,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clean up data: Remove all punctutation\n",
+    "##### Note: This goes a little too far and makes \"it's\" become \"its\". Couldn't think of a good workaround"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -171,7 +179,7 @@
    "outputs": [],
    "source": [
     "tokenized_words = map(lambda x, y: set(x.split() + y.split()), \n",
-    "                      headline, snippet)\n",
+    "                                  headline, snippet)\n",
     "tokenized_words = list(tokenized_words)"
    ]
   },
@@ -184,7 +192,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'about', 'in', 'luke', 'friendship', 'two', 'a', 'its', 'charming', 'to', 'new', 'pacquola', 'comedy', 'time', 'celia', 'mcgregor', 'best', 'make', 'and', 'aussie', 'friends'}\n"
+      "{'two', 'comedy', 'its', 'best', 'in', 'time', 'make', 'friendship', 'friends', 'charming', 'celia', 'to', 'and', 'a', 'mcgregor', 'pacquola', 'new', 'about', 'aussie', 'luke'}\n"
      ]
     }
    ],
@@ -254,35 +262,35 @@
        "      <td>59f89f9895d0e0246f213289</td>\n",
        "      <td>Cynthia Nixon to Host the National Book Awards</td>\n",
        "      <td>Cynthia Nixon's new role will be on the bookis...</td>\n",
-       "      <td>{on, the, side, nixons, role, awards, to, cynt...</td>\n",
+       "      <td>{role, be, the, on, awards, cynthia, will, to,...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>59f89eb195d0e0246f213282</td>\n",
        "      <td>Borghese Gallery Gathers a Full House of Berni...</td>\n",
        "      <td>The most comprehensive exhibition of the Baroq...</td>\n",
-       "      <td>{exhibition, around, borghese, of, maestro, mo...</td>\n",
+       "      <td>{the, associated, with, to, paintings, of, mae...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>59f89c5795d0e0246f213277</td>\n",
        "      <td>‘Stranger Things 2’: Pixar’s Andrew Stanton on...</td>\n",
        "      <td>The director of “Finding Nemo” and “Wall-E” di...</td>\n",
-       "      <td>{project, pixars, discussed, ‘stranger, being,...</td>\n",
+       "      <td>{the, “walle”, things, project, of, someone, d...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>59f8972e95d0e0246f213265</td>\n",
        "      <td>Judge Accidentally Reveals Winner of Hot Bakin...</td>\n",
        "      <td>A judge on the Great British Bake Off, a widel...</td>\n",
-       "      <td>{forced, after, episode, revealing, competitio...</td>\n",
+       "      <td>{the, british, reveals, to, hot, scheduled, of...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>59f893bb95d0e0246f21325a</td>\n",
        "      <td>2 Best Friends in a Charming Aussie Comedy Abo...</td>\n",
        "      <td>It's time to make two new friends: Celia Pacqu...</td>\n",
-       "      <td>{about, in, luke, friendship, two, a, its, cha...</td>\n",
+       "      <td>{two, comedy, its, best, in, time, make, frien...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -311,11 +319,11 @@
        "4  It's time to make two new friends: Celia Pacqu...   \n",
        "\n",
        "                                     tokenized_words  \n",
-       "0  {on, the, side, nixons, role, awards, to, cynt...  \n",
-       "1  {exhibition, around, borghese, of, maestro, mo...  \n",
-       "2  {project, pixars, discussed, ‘stranger, being,...  \n",
-       "3  {forced, after, episode, revealing, competitio...  \n",
-       "4  {about, in, luke, friendship, two, a, its, cha...  "
+       "0  {role, be, the, on, awards, cynthia, will, to,...  \n",
+       "1  {the, associated, with, to, paintings, of, mae...  \n",
+       "2  {the, “walle”, things, project, of, someone, d...  \n",
+       "3  {the, british, reveals, to, hot, scheduled, of...  \n",
+       "4  {two, comedy, its, best, in, time, make, frien...  "
       ]
      },
      "execution_count": 10,
@@ -325,6 +333,14 @@
    ],
    "source": [
     "x_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mapping each word to a number and then using that number to be an entry in an NxM matrix\n",
+    "Where N is the number of observations and M is the number of times that word is present in that column"
    ]
   },
   {
@@ -355,13 +371,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [
@@ -386,7 +395,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Leave 1 column for id\n",
     "x_arr = np.zeros((x_df.shape[0], len(unique_words)))"
    ]
   },
@@ -399,7 +407,14 @@
     "for row, tokens in enumerate(x_df.tokenized_words):\n",
     "    for token in tokens:\n",
     "        col = word_to_index_map[token]\n",
-    "        x_arr[row, col] = 1"
+    "        x_arr[row, col] += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now mapping categories (Arts, Business, etc) to a number"
    ]
   },
   {
@@ -448,6 +463,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creates random train sample and test sample"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
@@ -492,19 +514,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### \"Training\" the Model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1455.]\n",
-      " [ 1745.]\n",
-      " [ 2017.]\n",
-      " [ 1816.]\n",
-      " [ 1462.]]\n",
+      "[[ 1439.]\n",
+      " [ 1734.]\n",
+      " [ 1917.]\n",
+      " [ 1848.]\n",
+      " [ 1557.]]\n",
       "(5, 30926)\n"
      ]
     }
@@ -539,14 +568,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.17127722189523248, 0.20541494997057091, 0.23743378457916423, 0.21377280753384345, 0.17210123602118893]\n"
+      "[0.16939376103590348, 0.20412007062978221, 0.22566215420835786, 0.21753972925250148, 0.18328428487345497]\n"
      ]
     }
    ],
@@ -556,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,14 +594,14 @@
     "for i in range(num_categories):\n",
     "    for j in range(num_features):\n",
     "        w_jc[i, j] = math.log((theta_jc[i, j] * (1 - theta_jc[0, j])) / (theta_jc[0, j]*(1 - theta_jc[i, j])))\n",
-    "        w_zeroc[0, i] += math.log((1 - theta_jc[i, j]) / (1 - \n",
-    "                        theta_jc[0,j])) + math.log(theta_c[i] / theta_c[0])\n",
+    "#         w_zeroc[0, i] += math.log((1 - theta_jc[i, j]) / (1 - \n",
+    "#                         theta_jc[0,j])) + math.log(theta_c[i] / theta_c[0])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -580,8 +609,7 @@
      "output_type": "stream",
      "text": [
       "(5, 30926)\n",
-      "[[     0.           5622.1002104   10106.96920755   6859.9363636\n",
-      "     142.39831563]]\n"
+      "[[ 0.  0.  0.  0.  0.]]\n"
      ]
     }
    ],
@@ -591,15 +619,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predictions"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{2}\n"
+      "{0, 1, 2, 3, 4}\n"
      ]
     }
    ],
@@ -626,29 +661,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[     0.              0.              0.         ...,      0.              0.\n",
-      "       0.        ]\n",
-      " [  5612.29681142   5618.14707852   5612.67352068 ...,   5611.27105936\n",
-      "    5638.56216011   5623.14906878]\n",
-      " [ 10097.55072354  10097.78839271  10105.33155527 ...,  10099.30836788\n",
-      "   10106.03710634  10113.27915004]\n",
-      " [  6849.98924013   6854.39310685   6854.49894121 ...,   6847.99172512\n",
-      "    6862.6889999    6856.65044487]\n",
-      " [   134.16022741    146.02413237    133.94002363 ...,    143.57414038\n",
-      "     179.69790061    168.44941801]]\n"
+      "0.915479693938\n"
      ]
     }
    ],
    "source": [
-    "print(predictions[])"
+    "print(correct / len(x_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4203462032"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.getsizeof(x_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
