--- a/3-naive-bayes-article-classification/Preparing Data for Naive Bayes.ipynb
+++ b/3-naive-bayes-article-classification/Preparing Data for Naive Bayes.ipynb
@@ -10,15 +10,14 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import math"
+    "import math\n",
+    "from hurry.filesize import size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('data/NYT_data_cleaned.csv')"
@@ -26,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,16 +34,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_vals = df.section"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use 'headline' and 'snippet' as features"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +139,7 @@
        "4  It's time to make two new friends: Celia Pacqu...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,8 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def remove_punctuation(string):\n",
@@ -169,13 +179,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Combining 'headline' and 'snippet' data"
+    "### Combining 'headline' and 'snippet' data\n",
+    "##### Right now, the result is stored as a set. Therefore, if a word appears more than once, it is only counted once. If we want to change this, the workaround is to store the result as a list, not a set"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tokenized_words = map(lambda x, y: set(x.split() + y.split()), \n",
@@ -185,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'two', 'comedy', 'its', 'best', 'in', 'time', 'make', 'friendship', 'friends', 'charming', 'celia', 'to', 'and', 'a', 'mcgregor', 'pacquola', 'new', 'about', 'aussie', 'luke'}\n"
+      "{'a', 'to', 'new', 'make', 'comedy', 'time', 'friendship', 'about', 'in', 'two', 'aussie', 'its', 'celia', 'pacquola', 'luke', 'charming', 'and', 'mcgregor', 'friends', 'best'}\n"
      ]
     }
    ],
@@ -202,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -262,35 +275,35 @@
        "      <td>59f89f9895d0e0246f213289</td>\n",
        "      <td>Cynthia Nixon to Host the National Book Awards</td>\n",
        "      <td>Cynthia Nixon's new role will be on the bookis...</td>\n",
-       "      <td>{role, be, the, on, awards, cynthia, will, to,...</td>\n",
+       "      <td>{role, the, book, new, nixons, be, will, cynth...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>59f89eb195d0e0246f213282</td>\n",
        "      <td>Borghese Gallery Gathers a Full House of Berni...</td>\n",
        "      <td>The most comprehensive exhibition of the Baroq...</td>\n",
-       "      <td>{the, associated, with, to, paintings, of, mae...</td>\n",
+       "      <td>{a, baroque, brings, maestro, exhibition, borg...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>59f89c5795d0e0246f213277</td>\n",
        "      <td>‘Stranger Things 2’: Pixar’s Andrew Stanton on...</td>\n",
        "      <td>The director of “Finding Nemo” and “Wall-E” di...</td>\n",
-       "      <td>{the, “walle”, things, project, of, someone, d...</td>\n",
+       "      <td>{a, gun, stanton, project, of, hired, episodes...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>59f8972e95d0e0246f213265</td>\n",
        "      <td>Judge Accidentally Reveals Winner of Hot Bakin...</td>\n",
        "      <td>A judge on the Great British Bake Off, a widel...</td>\n",
-       "      <td>{the, british, reveals, to, hot, scheduled, of...</td>\n",
+       "      <td>{final, a, great, forced, off, been, to, uk, c...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>59f893bb95d0e0246f21325a</td>\n",
        "      <td>2 Best Friends in a Charming Aussie Comedy Abo...</td>\n",
        "      <td>It's time to make two new friends: Celia Pacqu...</td>\n",
-       "      <td>{two, comedy, its, best, in, time, make, frien...</td>\n",
+       "      <td>{a, to, new, make, comedy, time, friendship, a...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -319,20 +332,41 @@
        "4  It's time to make two new friends: Celia Pacqu...   \n",
        "\n",
        "                                     tokenized_words  \n",
-       "0  {role, be, the, on, awards, cynthia, will, to,...  \n",
-       "1  {the, associated, with, to, paintings, of, mae...  \n",
-       "2  {the, “walle”, things, project, of, someone, d...  \n",
-       "3  {the, british, reveals, to, hot, scheduled, of...  \n",
-       "4  {two, comedy, its, best, in, time, make, frien...  "
+       "0  {role, the, book, new, nixons, be, will, cynth...  \n",
+       "1  {a, baroque, brings, maestro, exhibition, borg...  \n",
+       "2  {a, gun, stanton, project, of, hired, episodes...  \n",
+       "3  {final, a, great, forced, off, been, to, uk, c...  \n",
+       "4  {a, to, new, make, comedy, time, friendship, a...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16990, 4)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Number of observations\n",
+    "x_df.shape"
    ]
   },
   {
@@ -345,21 +379,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique words: 30926\n"
+     ]
+    }
+   ],
    "source": [
     "unique_words = set()\n",
     "for words in x_df.tokenized_words:\n",
-    "    unique_words.update(words)"
+    "    unique_words.update(words)\n",
+    "print(\"Number of unique words:\", len(unique_words))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "word_to_index_map = {}\n",
@@ -371,28 +414,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(16990, 4)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x_df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x_arr = np.zeros((x_df.shape[0], len(unique_words)))"
@@ -400,8 +425,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for row, tokens in enumerate(x_df.tokenized_words):\n",
@@ -419,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -430,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -444,22 +471,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, ..., 4, 4, 4])"
+       "(16990,)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_vec"
+    "y_vec.shape"
    ]
   },
   {
@@ -471,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -482,8 +509,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x_test = [x for x in range(x_df.shape[0]) if x not in x_train]"
@@ -491,26 +520,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(16990, 30926)\n",
-      "(16990, 4)\n",
-      "(5, 30926)\n",
-      "8495\n"
+      "x_arr shape: (16990, 30926)\n",
+      "Number of unique words: 30926\n",
+      "Number of training examples: 8495\n"
      ]
     }
    ],
    "source": [
-    "print(x_arr.shape)\n",
-    "print(x_df.shape)\n",
+    "print(\"x_arr shape:\", x_arr.shape)\n",
     "word_count_by_class = np.zeros((5, x_arr.shape[1]))\n",
-    "print(word_count_by_class.shape)\n",
-    "print(len(x_train))"
+    "print(\"Number of unique words:\", word_count_by_class.shape[1])\n",
+    "print(\"Number of training examples:\", len(x_train))\n"
    ]
   },
   {
@@ -522,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -540,8 +567,8 @@
    ],
    "source": [
     "train_set=x_train\n",
-    "alpha=3\n",
-    "beta=3\n",
+    "alpha=1.01\n",
+    "beta=1.01\n",
     "\n",
     "num_features = x_arr.shape[1]\n",
     "num_obs = len(train_set)\n",
@@ -568,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -585,8 +612,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "w_jc = np.zeros(theta_jc.shape)\n",
@@ -601,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -661,14 +690,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
+   "execution_count": 83,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.915479693938\n"
+      "0.926545026486\n"
      ]
     }
    ],
@@ -678,23 +709,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4203462032"
+       "'3G'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import sys\n",
-    "sys.getsizeof(x_arr)"
+    "size(sys.getsizeof(x_arr))"
    ]
   },
   {
