--- a/3-naive-bayes-article-classification/Preparing Data for Naive Bayes.ipynb
+++ b/3-naive-bayes-article-classification/Preparing Data for Naive Bayes.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "4  It's time to make two new friends: Celia Pacqu...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -198,14 +198,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a', 'to', 'new', 'make', 'comedy', 'time', 'friendship', 'about', 'in', 'two', 'aussie', 'its', 'celia', 'pacquola', 'luke', 'charming', 'and', 'mcgregor', 'friends', 'best'}\n"
+      "{'friends', 'charming', 'and', 'mcgregor', 'new', 'luke', 'friendship', 'pacquola', 'make', 'aussie', 'comedy', 'a', 'about', 'to', 'in', 'two', 'time', 'celia', 'best', 'its'}\n"
      ]
     }
    ],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
@@ -275,35 +275,35 @@
        "      <td>59f89f9895d0e0246f213289</td>\n",
        "      <td>Cynthia Nixon to Host the National Book Awards</td>\n",
        "      <td>Cynthia Nixon's new role will be on the bookis...</td>\n",
-       "      <td>{role, the, book, new, nixons, be, will, cynth...</td>\n",
+       "      <td>{nixon, cynthia, host, national, awards, new, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>59f89eb195d0e0246f213282</td>\n",
        "      <td>Borghese Gallery Gathers a Full House of Berni...</td>\n",
        "      <td>The most comprehensive exhibition of the Baroq...</td>\n",
-       "      <td>{a, baroque, brings, maestro, exhibition, borg...</td>\n",
+       "      <td>{gallery, the, gathers, from, world, of, maest...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>59f89c5795d0e0246f213277</td>\n",
        "      <td>‘Stranger Things 2’: Pixar’s Andrew Stanton on...</td>\n",
        "      <td>The director of “Finding Nemo” and “Wall-E” di...</td>\n",
-       "      <td>{a, gun, stanton, project, of, hired, episodes...</td>\n",
+       "      <td>{someone, elses, the, directing, project, expe...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>59f8972e95d0e0246f213265</td>\n",
        "      <td>Judge Accidentally Reveals Winner of Hot Bakin...</td>\n",
        "      <td>A judge on the Great British Bake Off, a widel...</td>\n",
-       "      <td>{final, a, great, forced, off, been, to, uk, c...</td>\n",
+       "      <td>{hot, before, was, baking, forced, watched, re...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>59f893bb95d0e0246f21325a</td>\n",
        "      <td>2 Best Friends in a Charming Aussie Comedy Abo...</td>\n",
        "      <td>It's time to make two new friends: Celia Pacqu...</td>\n",
-       "      <td>{a, to, new, make, comedy, time, friendship, a...</td>\n",
+       "      <td>{friends, charming, and, mcgregor, new, luke, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -332,14 +332,14 @@
        "4  It's time to make two new friends: Celia Pacqu...   \n",
        "\n",
        "                                     tokenized_words  \n",
-       "0  {role, the, book, new, nixons, be, will, cynth...  \n",
-       "1  {a, baroque, brings, maestro, exhibition, borg...  \n",
-       "2  {a, gun, stanton, project, of, hired, episodes...  \n",
-       "3  {final, a, great, forced, off, been, to, uk, c...  \n",
-       "4  {a, to, new, make, comedy, time, friendship, a...  "
+       "0  {nixon, cynthia, host, national, awards, new, ...  \n",
+       "1  {gallery, the, gathers, from, world, of, maest...  \n",
+       "2  {someone, elses, the, directing, project, expe...  \n",
+       "3  {hot, before, was, baking, forced, watched, re...  \n",
+       "4  {friends, charming, and, mcgregor, new, luke, ...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "(16990, 4)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
        "(16990,)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -544,93 +544,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### \"Training\" the Model"
+    "## \"Training\" the Model\n",
+    "\n",
+    "##### `w_zeroc` \"perfectly\" weighted the model towards the class with the greatest number of observations. This led to the model predicting category 2 every time. Without the `w_zeroc` term, the model performs with high accuracy\n",
+    "\n",
+    "Note: My indices are reversed from the PDF. So my array with indices "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_naive_bayes(x_arr, y_vec, train_set, alpha, beta):\n",
+    "    num_features = x_arr.shape[1]\n",
+    "    num_obs = len(train_set)\n",
+    "    num_categories = 5\n",
+    "\n",
+    "    obs_count_by_class = np.zeros((num_categories, 1))\n",
+    "    for i in train_set:\n",
+    "        obs_count_by_class[y_vec[i], 0] += 1\n",
+    "    print(obs_count_by_class)\n",
+    "    theta_c = [count / len(train_set) for count in obs_count_by_class[:,0]]\n",
+    "\n",
+    "    obs_count_by_class = obs_count_by_class + alpha + beta - 2\n",
+    "\n",
+    "    word_count_by_class = np.zeros((num_categories, num_features))\n",
+    "    print(word_count_by_class.shape)\n",
+    "    for ix, i in enumerate(train_set):\n",
+    "        word_count_by_class[y_vec[i], :] += x_arr[i, :]\n",
+    "    word_count_by_class = word_count_by_class + alpha - 1\n",
+    "\n",
+    "    theta_jc = np.zeros(word_count_by_class.shape)\n",
+    "    obs_count_by_class = np.tile(obs_count_by_class, (1, num_features))\n",
+    "    theta_jc = np.divide(word_count_by_class, obs_count_by_class)\n",
+    "    \n",
+    "    w_jc = np.zeros(theta_jc.shape)\n",
+    "    w_zeroc = np.zeros([1,num_categories])\n",
+    "    for i in range(num_categories):\n",
+    "        for j in range(num_features):\n",
+    "            w_jc[i, j] = math.log((theta_jc[i, j] * (1 - theta_jc[0, j])) / (theta_jc[0, j]*(1 - theta_jc[i, j])))\n",
+    "#             w_zeroc[0, i] += math.log((1 - theta_jc[i, j]) / (1 - \n",
+    "#                             theta_jc[0,j])) + math.log(theta_c[i] / theta_c[0])\n",
+    "    return w_jc, w_zeroc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 1439.]\n",
-      " [ 1734.]\n",
-      " [ 1917.]\n",
-      " [ 1848.]\n",
-      " [ 1557.]]\n",
+      "[[ 1514.]\n",
+      " [ 1752.]\n",
+      " [ 1900.]\n",
+      " [ 1841.]\n",
+      " [ 1488.]]\n",
       "(5, 30926)\n"
      ]
     }
    ],
    "source": [
-    "train_set=x_train\n",
-    "alpha=1.01\n",
-    "beta=1.01\n",
-    "\n",
-    "num_features = x_arr.shape[1]\n",
-    "num_obs = len(train_set)\n",
-    "num_categories = 5\n",
-    "\n",
-    "obs_count_by_class = np.zeros((num_categories, 1))\n",
-    "for i in train_set:\n",
-    "    obs_count_by_class[y_vec[i], 0] += 1\n",
-    "print(obs_count_by_class)\n",
-    "theta_c = [count / len(train_set) for count in obs_count_by_class[:,0]]\n",
-    "\n",
-    "obs_count_by_class = obs_count_by_class + alpha + beta - 2\n",
-    "\n",
-    "word_count_by_class = np.zeros((num_categories, num_features))\n",
-    "print(word_count_by_class.shape)\n",
-    "for ix, i in enumerate(train_set):\n",
-    "    word_count_by_class[y_vec[i], :] += x_arr[i, :]\n",
-    "word_count_by_class = word_count_by_class + alpha - 1\n",
-    "        \n",
-    "theta_jc = np.zeros(word_count_by_class.shape)\n",
-    "obs_count_by_class = np.tile(obs_count_by_class, (1, num_features))\n",
-    "theta_jc = np.divide(word_count_by_class, obs_count_by_class)\n"
+    "w_jc, w_zeroc = train_naive_bayes(x_arr, y_vec, train_set=x_train, alpha=1.01, beta=1.01)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.16939376103590348, 0.20412007062978221, 0.22566215420835786, 0.21753972925250148, 0.18328428487345497]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(theta_c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "w_jc = np.zeros(theta_jc.shape)\n",
-    "w_zeroc = np.zeros([1,num_categories])\n",
-    "for i in range(num_categories):\n",
-    "    for j in range(num_features):\n",
-    "        w_jc[i, j] = math.log((theta_jc[i, j] * (1 - theta_jc[0, j])) / (theta_jc[0, j]*(1 - theta_jc[i, j])))\n",
-    "#         w_zeroc[0, i] += math.log((1 - theta_jc[i, j]) / (1 - \n",
-    "#                         theta_jc[0,j])) + math.log(theta_c[i] / theta_c[0])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -656,17 +640,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0, 1, 2, 3, 4}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def predict(w_jc, w_zeroc, x_arr, y_vec, test_set):\n",
     "    num_categories = 5\n",
@@ -676,21 +652,26 @@
     "        for cat in range(num_categories):\n",
     "            predictions[cat, i] += np.sum(w_jc[cat, :]*x_arr[obs, :])\n",
     "            predictions[cat,i] += w_zeroc[0, cat]\n",
-    "    return predictions\n",
-    "\n",
-    "predictions = predict(w_jc,w_zeroc, x_arr, y_vec, x_test)\n",
-    "\n",
-    "correct = 0\n",
-    "s = set()\n",
-    "for i, test_obs in enumerate(x_test):\n",
-    "    s.add(np.argmax(predictions[: , i]))\n",
-    "    correct += np.argmax(predictions[: , i]) == y_vec[test_obs]\n",
-    "print(s)"
+    "    return predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = predict(w_jc,w_zeroc, x_arr, y_vec, x_test)\n",
+    "\n",
+    "correct = 0\n",
+    "for i, test_obs in enumerate(x_test):\n",
+    "    s.add(np.argmax(predictions[: , i]))\n",
+    "    correct += np.argmax(predictions[: , i]) == y_vec[test_obs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -699,7 +680,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.926545026486\n"
+      "0.930311948205\n"
      ]
     }
    ],
@@ -709,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +699,7 @@
        "'3G'"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,13 +710,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "### TODO\n",
+    "1. Get confusion matrix\n",
+    "2. Define function to translate back to observation ID and category\n",
+    "3. Show pretty graphs with error rates, etc"
+   ]
   },
   {
    "cell_type": "code",
