--- a/3-naive-bayes-article-classification/Preparing Data for Naive Bayes.ipynb
+++ b/3-naive-bayes-article-classification/Preparing Data for Naive Bayes.ipynb
@@ -548,7 +548,7 @@
     "\n",
     "##### `w_zeroc` \"perfectly\" weighted the model towards the class with the greatest number of observations. This led to the model predicting category 2 every time. Without the `w_zeroc` term, the model performs with high accuracy\n",
     "\n",
-    "Note: My indices are reversed from the PDF. So my array with indices "
+    "Note: My indices are reversed from the PDF. So my array with indices [c, j] will be the PDF's [j, c]"
    ]
   },
   {
